added all the content and styles

--- a/index.html
+++ b/index.html
@@ -8,28 +8,71 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <h1>Vision board digitální akademie</h1>
     </header>
 
-    <main>
+    <main class="wrapper">
       <img src="./img/girl-dev.png" alt="girl developer" class="main-img" />
 
       <p>
         My expectations fron Czechitas: I hope to learn enough to get my first
         frontend job.
       </p>
-      <p>The technologies I'll learn in the next 3 months:</p>
+      <h2>The technologies I'll learn in the next 3 months:</h2>
       <ol>
-        <li class="list-item">
-          html and css
-          <img src="./img/html-5.png" alt="html" class="tech-logo" />
-          <img src="./img/css-3.png" alt="css" class="tech-logo" />
+        <li>
+          <div class="list-item">
+            <span>html and css</span>
+            <img src="./img/html-5.png" alt="html" class="tech-logo" />
+            <img src="./img/css-3.png" alt="css" class="tech-logo" />
+          </div>
         </li>
-        <li>javascript</li>
-        <li>git and github</li>
-        <li>React</li>
+        <li>
+          <div class="list-item">
+            <span>javascript</span>
+            <img
+              src="./img/javascript.png"
+              alt="javascript"
+              class="tech-logo"
+            />
+          </div>
+        </li>
+        <li>
+          <div class="list-item">
+            <span>git and github</span>
+            <img src="./img/git.png" alt="git" class="tech-logo" />
+          </div>
+        </li>
+        <li>
+          <div class="list-item">
+            <span>React</span>
+            <img src="./img/science.png" alt="react" class="tech-logo" />
+          </div>
+        </li>
       </ol>
+
+      <h2>The things I'm most excited about and looking forward to:</h2>
+
+      <ul>
+        <li>
+          <strong
+            >Aquiring FE skills enough to find a FE job in the
+            summer/fall</strong
+          >
+        </li>
+        <li>Meeting new people who share my interest of FE</li>
+        <li>Learning more about Czech IT market</li>
+        <li>Becoming part of the local IT community</li>
+        <li>Improving my Czech to B2 level</li>
+      </ul>
     </main>
+
+    <footer class="footer wrapper">
+      <span>You can see the projects I've completed on my</span>
+      <a href="https://github.com/olena-ho" class="link">
+        github
+      </a>
+    </footer>
   </body>
 </html>
